Adding an exception handler controller