@@ -1,16 +1,12 @@
 package by.academy.project.hotel.mappers;
 
-import by.academy.project.hotel.dto.UserRequest;
-import by.academy.project.hotel.dto.UserResponse;
-import by.academy.project.hotel.entities.user.Country;
-import by.academy.project.hotel.entities.user.Passport;
-import by.academy.project.hotel.entities.user.Role;
+import by.academy.project.hotel.dto.requests.UserRequest;
+import by.academy.project.hotel.dto.responces.UserResponse;
 import by.academy.project.hotel.entities.user.User;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
@@ -45,87 +41,9 @@ public final class UserMapper {
         return user;
     }
 
-    public Passport buildPassport(String passportSeries, String passportID, Country country) {
-        return Passport.builder()
-                .passportSeries(passportSeries)
-                .passportID(passportID)
-                .country(country)
-                .build();
-    }
-
-    public UserResponse buildUserDtoForGuest(UserResponse userResponse) {
-        return UserResponse.builder()
-                .id(userResponse.getId())
-                .name(userResponse.getName())
-                .surname(userResponse.getSurname())
-                .login(userResponse.getLogin())
-                .password(userResponse.getPassword())
-                .email(userResponse.getEmail())
-                .phone(userResponse.getPhone())
-                .role(userResponse.getRole())
-                .build();
-    }
-
-    public UserResponse buildUserDtoForManager(UserResponse userResponse) {
-        return UserResponse.builder()
-                .id(userResponse.getId())
-                .name(userResponse.getName())
-                .surname(userResponse.getSurname())
-                .passport(userResponse.getPassport())
-                .email(userResponse.getEmail())
-                .phone(userResponse.getPhone())
-                .role(userResponse.getRole())
-                .build();
-    }
-
     public UserResponse buildUserDto(User user, BookingMapper bookingMapper) {
         return user.getBookings() != null ? buildUserDtoWithBookings(user, bookingMapper) : buildUserDtoWithoutBookings(user);
     }
-
-//    public UserDto buildUserDtoForGuest(HttpServletRequest req) {
-//        return UserDto.builder()
-//                .name(req.getParameter(NAME))
-//                .surname(req.getParameter(SURNAME))
-//                .login(req.getParameter(LOGIN))
-//                .password(req.getParameter(PASSWORD))
-//                .passport(new Passport())
-//                .email(req.getParameter(EMAIL))
-//                .phone(req.getParameter(PHONE))
-//                .role(Role.GUEST)
-//                .build();
-//    }
-//
-//    public UserDto buildUserDtoForManager(HttpServletRequest req) {
-//        return UserDto.builder()
-//                .name(req.getParameter(NAME))
-//                .surname(req.getParameter(SURNAME))
-//                .passport(this.buildPassport(
-//                        req.getParameter(PASSPORT_SERIES),
-//                        req.getParameter(PASSPORT_ID),
-//                        Country.valueOf(req.getParameter(COUNTRY).toUpperCase()))
-//                )
-//                .email(req.getParameter(EMAIL))
-//                .phone(req.getParameter(PHONE))
-//                .role(Role.GUEST)
-//                .build();
-//    }
-//
-//    public UserDto buildUserDto(HttpServletRequest req) {
-//        return UserDto.builder()
-//                .name(req.getParameter(NAME))
-//                .surname(req.getParameter(SURNAME))
-//                .login(req.getParameter(LOGIN))
-//                .password(req.getParameter(PASSWORD))
-//                .passport(this.buildPassport(
-//                        req.getParameter(PASSPORT_SERIES),
-//                        req.getParameter(PASSPORT_ID),
-//                        Country.valueOf(req.getParameter(COUNTRY).toUpperCase()))
-//                )
-//                .email(req.getParameter(EMAIL))
-//                .phone(req.getParameter(PHONE))
-//                .role(Role.valueOf(req.getParameter(ROLE).toUpperCase()))
-//                .build();
-//    }
 
     public UserResponse buildUserDtoWithoutBookings(User user) {
         return UserResponse.builder()
@@ -142,20 +60,13 @@ public final class UserMapper {
                 .build();
     }
 
-    public List<UserResponse> filterUsersDto(List<UserResponse> users) {
-        return users.stream()
-                .filter(user -> user.getRole() == Role.GUEST)
-                .map(this::buildUserDtoForManager)
-                .collect(Collectors.toList());
-    }
-
     public List<UserResponse> buildUsersDto(List<User> users, BookingMapper bookingMapper) {
         return users.stream()
                 .map(user -> buildUserDto(user, bookingMapper))
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    private UserResponse buildUserDtoWithBookings(User user, BookingMapper bookingMapper){
+    private UserResponse buildUserDtoWithBookings(User user, BookingMapper bookingMapper) {
         return UserResponse.builder()
                 .id(user.getId())
                 .name(user.getName())
